fixed yahoo quotes and upgraded libraries